--- a/sengou-portal/getOrderInfo.html
+++ b/sengou-portal/getOrderInfo.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/webbase.css" />
     <link rel="stylesheet" type="text/css" href="css/pages-getOrderInfo.css" />
+	<link rel="icon" href="/img/favicon.png">
 </head>
 
 <body>
