--- a/sengou-portal/cart.html
+++ b/sengou-portal/cart.html
@@ -23,7 +23,7 @@
 
         <!--logoArea-->
         <div class="logoArea">
-            <div class="fl logo"><span class="title">购物车</span></div>
+            <a href="index.html"><div class="fl logo"><span class="title">购物车</span></div></a>
         </div>
 
         <!--All goods-->
@@ -31,7 +31,7 @@
             <h4>全部商品<span>11</span></h4>
             <div class="cart-main">
                 <div class="yui3-g cart-th">
-                    <div class="yui3-u-1-4"><input type="checkbox" name="checkAll" @click="checkAll"/> 全部</div>
+                    <div class="yui3-u-1-4"><input ref="selectAllTop" type="checkbox" @click="selectAll()"/> 全部</div>
                     <div class="yui3-u-1-4">商品</div>
                     <div class="yui3-u-1-8">单价（元）</div>
                     <div class="yui3-u-1-8">数量</div>
@@ -44,17 +44,17 @@
                         <div class="cart-list">
                             <ul class="goods-list yui3-g" v-for="(cart,i) in carts" :key="i">
                                 <li class="yui3-u-1-24">
-                                    <input type="checkbox" name="" v-model="selected" :value="cart" />
+                                    <input type="checkbox" @click="selectSingle()" v-model="selected" :value="cart" />
                                 </li>
                                 <li class="yui3-u-11-24">
                                     <div class="good-item">
                                         <div class="item-img"><img :src="cart.image" width="80px" height="80px"/></div>
                                         <div class="item-msg">
 												<span style="line-height:70px ">
-                                                    {{cart.title}} <br/>
-                                                     <span v-for="(v,k) in JSON.parse(cart.ownSpec)" :key="k">
-                                                           {{v}}
-                                                     </span>
+													{{cart.title}}<br/>
+                                                    <span v-for="(v,k) in cart.ownSpec" :key="k">
+                                                        {{v}}
+                                                    </span>
 												</span>
                                         </div>
                                     </div>
@@ -62,13 +62,13 @@
 
                                 <li class="yui3-u-1-8"><span style="line-height:70px " class="price">{{ly.formatPrice(cart.price)}}</span></li>
                                 <li class="yui3-u-1-8" style="padding-top: 20px">
-                                    <a href="javascript:void(0)" @click="decrement(cart)" class="increment mins">-</a>
+                                    <a href="javascript:void(0)" class="increment mins" @click="decrement(cart)">-</a>
                                     <input autocomplete="off" type="text" v-model="cart.num" minnum="1" class="itxt" />
-                                    <a href="javascript:void(0)" @click="increment(cart)" class="increment plus">+</a>
+                                    <a href="javascript:void(0)" class="increment plus" @click="increment(cart)">+</a>
                                 </li>
                                 <li class="yui3-u-1-8"><span style="line-height:70px " class="sum">{{ly.formatPrice(cart.price*cart.num)}}</span></li>
                                 <li class="yui3-u-1-8">
-                                    <a href="#none" @click="deleteCart(cart)">删除</a><br />
+                                    <a href="#none" @click="deleteCart(i)">删除</a><br />
                                     <a href="#none">移到我的关注</a>
                                 </li>
                             </ul>
@@ -79,7 +79,7 @@
             </div>
             <div class="cart-tool">
                 <div class="select-all">
-                    <input type="checkbox" name="checkAll" @click="checkAll"/>
+                    <input type="checkbox" @click="selectAll" ref="selectAllBottom"/>
                     <span>全选</span>
                 </div>
                 <div class="option">
@@ -88,13 +88,13 @@
                     <a href="#none">清除下柜商品</a>
                 </div>
                 <div class="toolbar">
-                    <div class="chosed">已选择<span>{{totalNumber}}</span>件商品</div>
+                    <div class="chosed">已选择<span>{{totalNum}}</span>件商品</div>
                     <div class="sumprice">
                         <span><em>总价（不含运费） ：</em><i class="summoney">{{totalPrice}}</i></span>
                         <span><em>已节省：</em><i>-¥20.00</i></span>
                     </div>
                     <div class="sumbtn">
-                        <a class="sum-btn"  href="getOrderInfo.html"  target="_blank">结算</a>
+                        <a class="sum-btn"  @click.prevent="toOrderInfo"  target="_blank">结算</a>
                     </div>
                 </div>
             </div>
@@ -267,86 +267,120 @@
         el: "#cartApp",
         data: {
             ly,
-            carts: [],// 购物车数据
-            selected: [] //记录被选中的商品
-        },
-        created() {
-            this.loadCarts();
-        },
-        methods: {
-            loadCarts() {
-                // 先判断登录状态
-                ly.verifyUser().then(() => {
-                    // 已登录
-                    //判断localStorage中是否有数据
-                    this.carts = ly.store.get("carts") || [];
-                    if (this.carts.length !== 0){
-                        for(j = 0,len=this.carts.length;j<len;j++){
-                            const cart = this.carts[j];
-                            ly.http.post("/cart", {skuId: cart.skuId, num: cart.num})
-                            ly.store.del("carts")
-                        }
-                    }
-                    ly.http.get("/cart/").then(({data})=>{
-                        this.carts = data;
-                        this.selected = data;
-                    });
-                }).catch(() => {
-                    // 未登录
-                    this.carts = ly.store.get("carts") || [];
-                    this.selected = this.carts;
-                })
-            },
-            increment(c) {
-                c.num++;
-                ly.verifyUser().then(() => {
-                    //已登录，向后台发起请求
-                    ly.http.put("/cart",{skuId: c.skuId,num: c.num});
-                }).catch(() => {
-                    // 未登录，直接操作本地数据
-                    ly.store.set("carts", this.carts);
-                })
-            },
-            decrement(c) {
-                if (c.num <= 1) {
-                    return;
-                }
-                c.num--;
-                ly.verifyUser().then(() => {
-                    //已登录，向后台发起请求
-                    ly.http.put("/cart",{skuId: c.skuId,num: c.num});
-                }).catch(() => {
-                    // 未登录，直接操作本地数据
-                    ly.store.set("carts", this.carts);
-                })
-            },
-            deleteCart(c){
-                ly.verifyUser().then(res=>{
-                    // TODO，已登录购物车
-                    ly.http.delete("/cart/"+c.skuId)
-                    alert("删除成功");
-                    this.loadCarts();
-                }).catch(()=>{
-                    // 未登录购物车
-                    this.carts.splice(i, 1);
-                    ly.store.set("carts", this.carts);
-                })
-            },
-            checkAll(){
-                alert($("input[name=checkAll]").attr("check"))
-                this.a==true? this.selected=this.carts:[];
-            }
+            carts:[], //购物车数据
+            selected:[] //记录选中的商品
         },
         components: {
             shortcut: () => import("/js/pages/shortcut.js")
         },
-        computed: {
-            totalPrice() {
-                return ly.formatPrice(this.selected.reduce((c1, c2) => c1 + c2.num * c2.price, 0));
+        created(){
+            this.loadCarts();
+        },
+        computed:{
+            totalPrice(){
+                return ly.formatPrice(this.selected.reduce((c1,c2) => c1+c2.num*c2.price,0))
             },
-            totalNumber(){
-                return 5;
+
+            totalNum(){
+                return this.selected.reduce((c1,c2) => c1+c2.num,0);
             }
+        },
+        methods:{
+            loadCarts() {
+                //1.先判断登录状态
+                ly.verifyUser().then(res => {
+                    //2.已经登录
+                    leyou.http.get("/cart").then(({data}) => {
+                        this.carts = data;
+                        this.carts.forEach(s => {
+                            s.ownSpec = JSON.parse(s.ownSpec);
+                        });
+                        this.selected = this.carts;
+                        this.$refs.selectAllTop.checked = true;
+                        this.$refs.selectAllBottom.checked = true;
+
+                    }).catch(() => {
+                        console.log("查询失败")
+                    })
+
+                }).catch(() => {
+                    //3.未登陆
+                    this.carts = ly.store.get("carts") || [];
+                    this.carts.forEach(s => {
+                        s.ownSpec = JSON.parse(s.ownSpec);
+                    });
+                    this.selected = this.carts;
+                    this.$refs.selectAllTop.checked = true;
+                    this.$refs.selectAllBottom.checked = true;
+                })
+            },
+            increment(c){
+                c.num++;
+                ly.verifyUser().then(() =>{
+                    //已经登录，向后台发起请求
+                    ly.http.put("/cart",ly.stringify({skuId:c.skuId,num:c.num}))
+                }).catch(() => {
+                    //未登录，直接操作本地数据库
+                    ly.store.set("carts",this.carts);
+                })
+            },
+            decrement(c){
+                if (c.num <= 1){
+                    return;
+                }
+                c.num--;
+                ly.verifyUser().then(() =>{
+                    //已经登录，向后台发起请求
+                    ly.http.put("/cart",ly.stringify({skuId:c.skuId,num:c.num}))
+                }).catch(() => {
+                    //未登录，直接操作本地数据库
+                    ly.store.set("carts",this.carts);
+                })
+            },
+            deleteCart(i){
+                ly.verifyUser().then(() =>{
+                    //已经登录，向后台发起请求
+                    ly.http.delete("/cart/"+this.carts[i].skuId).then(() => {
+                        this.carts.splice(i,1);
+                    });
+                    //console.log(this.carts[i].skuId)
+                }).catch(() => {
+                    //未登录，直接操作本地数据库
+                    this.carts.splice(i,1);
+                    ly.store.set("carts",this.carts);
+                })
+            },
+            selectAll(){
+                if(this.selected.length !== ly.store.get("carts").length){
+                    this.selected = this.carts;
+                }else  {
+                    this.selected = [];
+                }
+            },
+            selectSingle(){
+
+                if(this.selected.length !== ly.store.get("carts").length - 1){
+                    this.$refs.selectAllTop.checked=false;
+                    this.$refs.selectAllBottom.checked=false;
+                }else{
+                    this.$refs.selectAllTop.checked=true;
+                    this.$refs.selectAllBottom.checked=true;
+                }
+            },
+            toOrderInfo(){
+                //1.判断是否登录
+                ly.verifyUser().then(() => {
+                    //2.已登录
+                    //2.1 保存已经选购的购物车记录到localStorage
+                    ly.store.set("selectedCarts",this.selected);
+                    //2.2 跳转到订单页面
+                    window.location.href = "/getOrderInfo.html";
+                }).catch(() => {
+                    //3.未登录
+                    window.location.href = "/login.html?returnUrl=" + window.location.href;
+                })
+            }
+
         }
     })
 </script>
@@ -359,6 +393,7 @@
 <script type="text/javascript" src="js/plugins/jquery.easing/jquery.easing.min.js"></script>
 <script type="text/javascript" src="js/plugins/sui/sui.min.js"></script>
 <script type="text/javascript" src="js/widget/nav.js"></script>
+
 </body>
 
 </html>
